--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+asgiref==3.4.1
+beautifulsoup4==4.10.0
+bs4==0.0.1
 click==8.0.3
 colorama==0.4.4
-dominate==2.6.0
+Django==4.0
 Flask==2.0.2
-Flask-Bootstrap==3.3.7.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
-gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-SQLAlchemy==1.4.29
-visitor==0.1.3
+pytz==2021.3
+soupsieve==2.3.1
+SQLAlchemy==1.4.28
+sqlparse==0.4.2
+tzdata==2021.5
 Werkzeug==2.0.2
