--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
-env:
-  MY_EMAIL: ${{ secrets.MY_EMAIL }}
-  MY_PASS: ${{ secrets.MY_PASS }}
-  R_EMAIL: ${{ secrets.R_EMAIL }}
-  DATABASE_KEY: ${{ secrets.DATABASE_KEY }}
-  TEST: ${{ secrets.TEST }}
+- name: Test
+  run: |
+    echo $TEST
+  env:
+    MY_EMAIL: ${{ secrets.MY_EMAIL }}
+    MY_PASS: ${{ secrets.MY_PASS }}
+    R_EMAIL: ${{ secrets.R_EMAIL }}
+    DATABASE_KEY: ${{ secrets.DATABASE_KEY }}
+    TEST: ${{ secrets.TEST }}
