--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,15 @@
 - name: Test
-  run: |
-    echo $TEST
-  env:
-    MY_EMAIL: ${{ secrets.MY_EMAIL }}
-    MY_PASS: ${{ secrets.MY_PASS }}
-    R_EMAIL: ${{ secrets.R_EMAIL }}
-    DATABASE_KEY: ${{ secrets.DATABASE_KEY }}
-    TEST: ${{ secrets.TEST }}
+  on: push
+  jobs:
+    job1:
+      runs-on:ubuntu-latest
+      steps:
+        - name: Testing
+          run: |
+            echo $TEST
+          env:
+            MY_EMAIL: ${{ secrets.MY_EMAIL }}
+            MY_PASS: ${{ secrets.MY_PASS }}
+            R_EMAIL: ${{ secrets.R_EMAIL }}
+            DATABASE_KEY: ${{ secrets.DATABASE_KEY }}
+            TEST: ${{ secrets.TEST }}
