--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,17 @@
-- name: Test
-  on: push
-  jobs:
-    job1:
-      runs-on:ubuntu-latest
-      steps:
-        - name: Testing
-          run: |
-            echo $TEST
-          env:
-            MY_EMAIL: ${{ secrets.MY_EMAIL }}
-            MY_PASS: ${{ secrets.MY_PASS }}
-            R_EMAIL: ${{ secrets.R_EMAIL }}
-            DATABASE_KEY: ${{ secrets.DATABASE_KEY }}
-            TEST: ${{ secrets.TEST }}
+name: Test
+
+on: push
+
+jobs:
+  get_info:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Testing
+        run: |
+          echo $TEST
+        env:
+          MY_EMAIL: ${{ secrets.MY_EMAIL }}
+          MY_PASS: ${{ secrets.MY_PASS }}
+          R_EMAIL: ${{ secrets.R_EMAIL }}
+          DATABASE_KEY: ${{ secrets.DATABASE_KEY }}
+          TEST: ${{ secrets.TEST }}
