--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+boto3==1.20.26
+botocore==1.23.26
 click==8.0.3
 colorama==0.4.4
 dominate==2.6.0
@@ -8,7 +10,12 @@ greenlet==1.1.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+jmespath==0.10.0
 MarkupSafe==2.0.1
+python-dateutil==2.8.2
+s3transfer==0.5.0
+six==1.16.0
 SQLAlchemy==1.4.29
+urllib3==1.26.7
 visitor==0.1.3
 Werkzeug==2.0.2
