--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,15 @@
-asgiref==3.4.1
-beautifulsoup4==4.10.0
-boto3==1.20.26
-botocore==1.23.26
-bs4==0.0.1
+boto==2.49.0
 click==8.0.3
 colorama==0.4.4
-Django==4.0
+dominate==2.6.0
 Flask==2.0.2
+Flask-Bootstrap==3.3.7.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
-jmespath==0.10.0
 MarkupSafe==2.0.1
-python-dateutil==2.8.2
-pytz==2021.3
-s3transfer==0.5.0
-six==1.16.0
-soupsieve==2.3.1
-SQLAlchemy==1.4.28
-sqlparse==0.4.2
-tzdata==2021.5
-urllib3==1.26.7
+SQLAlchemy==1.4.29
+visitor==0.1.3
 Werkzeug==2.0.2
